Landing minimal patch for bug 82873 "HTTP/1.1 trailers not supported" r=gagan, sr=dougt, a=asa